--- a/index.html
+++ b/index.html
@@ -181,9 +181,9 @@
       var message;
       if (hash){
         hash = hash.slice(1);
-        message = "Have a 'Lovely' Valintine's Day, " + hash;
+        message = "Have a 'Lovely' Valentine's Day, " + hash;
       }else{
-        message = "Have a 'Lovely' Valintine's Day"
+        message = "Have a 'Lovely' Valentine's Day"
       }
 
       var place = document.getElementById("insert_name")
